[package]
name = "kvs"
version = "0.1.0"
authors = ["Dylan Dsouza <dsouzadyn@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
clap = { version = "4.2.2", features = ["derive"] }
predicates = "1.0.0"
